# CodeGeneratorAPI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: BarcodeFactory.h  QRCodeGenerator.h  QrGenerator.h
include/Network/: BarcodeHandler.h  CrowNetworkServer.h  INetworkServer.h  IRouteHandler.h
src/: BarcodeFactory.cpp  Code39Generator.cpp  Ean8Generator.cpp  QRCodeGenerator.cpp  QrGenerator.cpp  main.cpp
src/Network/: BarcodeHandler.cpp  CrowNetworkServer.cpp
